<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cloth">

    <fragment
        android:id="@+id/navigation_cloth"
        android:name="com.example.parentingbook.ui.cloth.ClothFragment"
        android:label="@string/title_cloth"
        tools:layout="@layout/fragment_cloth" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.parentingbook.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_living"
        android:name="com.example.parentingbook.ui.living.LivingFragment"
        android:label="@string/title_living"
        tools:layout="@layout/fragment_living" />

    <fragment
        android:id="@+id/navigation_walk"
        android:name="com.example.parentingbook.ui.walk.WalkFragment"
        android:label="@string/title_walk"
        tools:layout="@layout/fragment_walk" />
</navigation>