<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.youth.banner.Banner
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/food_banner"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:indicator_width="10dp"
            app:indicator_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/food_item1_image"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    app:srcCompat="@drawable/baby_tag1"
                    android:clickable="true"/>
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/food_nutrition"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/food_item2_image"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    app:srcCompat="@drawable/baby_tag2"
                    android:clickable="true"/>
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/food_healthy_recipes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/food_item3_image"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    app:srcCompat="@drawable/baby_tag3"
                    android:clickable="true"/>
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/food_special_recipes"/>
            </LinearLayout>

        </LinearLayout>

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginBottom="60dp">-->
        <!--            <ListView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:id="@+id/cloth_main_articles"-->
        <!--               >-->
        <!--            </ListView>-->
        <!--        </LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/food_main_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_animation_fall"
                >
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>